Added Entity Framework and Some Model Classes

--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
 
                     <li>
-                        @Html.ActionLink("Department", "Department", "Department")
+                        @Html.ActionLink("Department", "SaveDepartment", "Department")
                         <ul>
-                            <li>@Html.ActionLink("Save Department", "Department", "Department")</li>
-                            <li>@Html.ActionLink("View All Department", "Department", "Department")</li>
+                            <li>@Html.ActionLink("Save Department", "SaveDepartment", "Department")</li>
+                            <li>@Html.ActionLink("View All Department", "ViewDetails", "Department")</li>
                         </ul>
                     </li>
                     <li>
