--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Department/SaveDepartment.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Department/SaveDepartment.cshtml
@@ -17,6 +17,11 @@
     <div class="form-horizontal">
 
         @Html.RenderFlashMessages()
+        @*<fieldset>
+            <legend>Save Course</legend>
+            <div class="col-md-8 col-md-offset-3"></div>
+        </fieldset>*@
+
 
         <fieldset>
             <legend>Save Department</legend>
