--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
@@ -32,8 +32,8 @@
                     <li>
                         @Html.ActionLink("Course", "Department", "Department")
                         <ul>
-                            <li>@Html.ActionLink("Save Course", "Department", "Department")</li>
-                            <li>@Html.ActionLink("View Course Details", "Department", "Department")</li>
+                            <li>@Html.ActionLink("Save Course", "Save", "Course")</li>
+                            <li>@Html.ActionLink("View Course Details", "Index", "Course")</li>
                             <li>@Html.ActionLink("Unassign All Courses", "Department", "Department")</li>
                         </ul>
                     </li>
