--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                     <li>
                         @Html.ActionLink("Teacher", "Department", "Department")
                         <ul>
-                            <li>@Html.ActionLink("Save Teacher", "Department", "Department")</li>
+                            <li>@Html.ActionLink("Save Teacher", "Save", "Teacher")</li>
                             <li>@Html.ActionLink("Course Assign to Teacher", "Department", "Department")</li>
                         </ul>
                     </li>
