Working on Story 5 and Having some problem with Ajax

--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                         @Html.ActionLink("Teacher", "Department", "Department")
                         <ul>
                             <li>@Html.ActionLink("Save Teacher", "Save", "Teacher")</li>
-                            <li>@Html.ActionLink("Course Assign to Teacher", "Department", "Department")</li>
+                            <li>@Html.ActionLink("Course Assign to Teacher", "Save", "CourseAssign")</li>
                         </ul>
                     </li>
                     <li>
