--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Teacher/Save.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Teacher/Save.cshtml
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.DesignationId, "DesignationId", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.DesignationId, "Designation", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("DesignationId", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.DesignationId, "", new { @class = "text-danger" })
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.DepartmentId, "DepartmentId", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.DepartmentId, "Department", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("DepartmentId", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
