--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Shared/_Layout.cshtml
@@ -30,34 +30,33 @@
                         </ul>
                     </li>
                     <li>
-                        @Html.ActionLink("Course", "Department", "Department")
+                        @Html.ActionLink("Course", "Save", "Course")
                         <ul>
                             <li>@Html.ActionLink("Save Course", "Save", "Course")</li>
-                            <li>@Html.ActionLink("View Course Details", "Index", "Course")</li>
+                            <li>@Html.ActionLink("View Course Details", "ViewCourseStatistics", "CourseAssign")</li>
                             <li>@Html.ActionLink("Unassign All Courses", "Department", "Department")</li>
                         </ul>
                     </li>
                     <li>
-                        @Html.ActionLink("Teacher", "Department", "Department")
+                        @Html.ActionLink("Teacher", "Save", "Teacher")
                         <ul>
                             <li>@Html.ActionLink("Save Teacher", "Save", "Teacher")</li>
                             <li>@Html.ActionLink("Course Assign to Teacher", "Save", "CourseAssign")</li>
                         </ul>
                     </li>
                     <li>
-                        @Html.ActionLink("Student", "Department", "Department")
+                        @Html.ActionLink("Student", "Register", "Student")
                         <ul>
-                            <li>@Html.ActionLink("Register Student", "Department", "Department")</li>
-                            <li>@Html.ActionLink("Student Details", "Department", "Department")</li>
+                            <li>@Html.ActionLink("Register Student", "Register", "Student")</li>
                             <li>@Html.ActionLink("Enroll Student in a Course", "Department", "Department")</li>
                             <li>@Html.ActionLink("Save Student Result", "Department", "Department")</li>
                             <li>@Html.ActionLink("View Result", "Department", "Department")</li>
                         </ul>
                     </li>
                     <li>
-                        @Html.ActionLink("Class-Room", "Department", "Department")
+                        @Html.ActionLink("Class-Room", "Allocate", "RoomAllocation")
                         <ul>
-                            <li>@Html.ActionLink("Class Room Allocation", "Department", "Department")</li>
+                            <li>@Html.ActionLink("Class Room Allocation", "Allocate", "RoomAllocation")</li>
                             <li>@Html.ActionLink("Class Schedule and Room Information", "Department", "Department")</li>
                             <li>@Html.ActionLink("Unallocate Classrooms", "Department", "Department")</li>
                         </ul>
